Fixed: uneven positioning for mobile navbar icons

--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -145,7 +145,7 @@ body {
   color: var(--accent);
 }
 .header-mobile-btns .fa-moon {
-  margin-top: 5px;
+  margin-top: 4.7px;
 }
 .header-mobile-btns .fi-rr-sun {
   margin-top: 5px;
