--- a/src/style/sass/_styles.scss
+++ b/src/style/sass/_styles.scss
@@ -74,7 +74,7 @@
 
             .fa-moon {
 
-                margin-top: 5px;
+                margin-top: 4.7px;
 
             }
 
